--- a/app/src/main/java/com/example/app1/style.css
+++ b/app/src/main/java/com/example/app1/style.css
@@ -52,7 +52,7 @@ body {
 	font-size: 0;
 }
 
-#box{
+#box1{
 	position: absolute;
 	top: 30px;
 	left: 0;
@@ -66,6 +66,24 @@ body {
 	border-radius: 0 0px 6px 6px;
 	font-size: 14px;
 	margin-bottom: 100px;
+	display: block;
+}
+
+#box2{
+	position: absolute;
+	top: 30px;
+	left: 0;
+	display: block;
+	margin: 4px 0 0;
+	padding: 10px;
+	width: 92%;
+	height: 240px;
+	border: 1px solid #5B9BD5;
+	-webkit-border-radius: 0 0px 6px 6px;
+	border-radius: 0 0px 6px 6px;
+	font-size: 14px;
+	margin-bottom: 100px;
+	display: none;
 }
 
 #tab::before{
